#1098: fix issue with legend getting clipped when smaller browser height

--- a/src/app/search-results-summary-report/search-results-summary-report.component.scss
+++ b/src/app/search-results-summary-report/search-results-summary-report.component.scss
@@ -33,7 +33,7 @@
 
 .legend {
     margin-left: 20px;
-    overflow: hidden;
+    overflow: auto;
     padding-left: 10px;
 }
 
